<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="ai.ll.tflitemnist.MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/ResultText"
            android:text="@string/prediction" />

        <TextView
            android:id="@+id/tv_prediction"
            style="@style/ResultText"
            android:text="@string/empty"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            tools:text="1" />

        <TableRow>

            <TextView
                style="@style/ResultText"
                android:text="@string/probability" />

            <TextView
                style="@style/ResultText"
                android:text="@string/timecost" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tv_probability"
                style="@style/ResultText"
                android:text="@string/empty"
                android:textColor="@android:color/black"
                tools:text="0.9" />


            <TextView
                android:id="@+id/tv_timecost"
                style="@style/ResultText"
                android:text="@string/empty"
                android:textColor="@android:color/black"
                tools:text="10ms" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_detect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/detect" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear" />

    </LinearLayout>

    <com.github.gcacace.signaturepad.views.SignaturePad
        android:id="@+id/signature_pad"
        android:layout_width="343dp"
        android:layout_height="397dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_rect_border"
        android:visibility="visible"
        app:penMaxWidth="7dp"
        app:penMinWidth="3dp"
        tools:ignore="MissingConstraints" />

</LinearLayout>
